# otlp2parquet

./: Cargo.toml  Makefile  README.md
.github/workflows/: build-artifacts.yml  ci.yml  docs.yml  release.yml
crates/otlp2parquet/: Cargo.toml
crates/otlp2parquet-cloudflare/: Cargo.toml  wrangler.ci.toml
crates/otlp2parquet-common/: Cargo.toml
crates/otlp2parquet-core/: Cargo.toml
crates/otlp2parquet-core/src/otlp/common/: json_normalizer.rs
crates/otlp2parquet-core/src/otlp/logs/: format.rs
crates/otlp2parquet-handlers/: Cargo.toml
crates/otlp2parquet-lambda/: template.yaml
crates/otlp2parquet/src/: main.rs
crates/otlp2parquet/src/deploy/: cloudflare.rs  mod.rs
docs/: deploying.md  index.md
scripts/: delete-all-s3-tables.sh
src/: lib.rs
