[package]
name = "otlp2parquet-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
anyhow = { workspace = true }
hex = { workspace = true }
otlp2records = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
